# rover_install

./: CMakeLists.txt  README.md  RoverInstaller.py  roverinstaller.py  start.sh  variables.py
src/: main.cpp
src/UI/: log_displayer.cpp  log_displayer.hpp  logger.cpp  ros_install_tab.cpp  rover_install_tab.cpp  ui.cpp  ui.hpp
src/configs/: ros_install.json  rover_install.json
src/include/: log_line.cpp  log_line.hpp  logger.hpp  robot_info.hpp  ui.hpp
